# django-enterprise-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DECISIONS.md  OPERATIONS.md  THREAT_MODEL.md
src/apps/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/tests/: test_auth.py
src/apps/api/: admin.py  models.py  urls.py  views.py
src/apps/api/tests/: __init__.py  test_admin_ping.py  test_ping.py
src/apps/audit/: admin.py  middleware.py  models.py  urls.py  views.py
src/apps/audit/migrations/: 0001_initial.py
src/apps/audit/tests/: __init__.py  test_audit.py
src/apps/core/: urls.py  views.py
src/apps/core/tests/: test_health.py
src/common/: json_logging.py  logging_context.py
src/config/: settings.py  urls.py
